--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 *.dll
 *.so
 *.dylib
+.idea
+.fleet
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,4 +14,5 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+.DS_Store
