--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,4 +16,4 @@ jobs:
           go get -u
           go mod tidy
       - name: Build
-        run: go build -v ./../../main.go
+        run: go build -v main.go
